--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2593,7 +2593,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/overlay.png"), url("../../images/bg-3.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
 		background-size: auto,								150%;
@@ -3078,7 +3078,7 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+				background-image: url("images/overlay.png"), url("../../images/bg-3.jpg");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
@@ -3219,3 +3219,120 @@ input, select, textarea {
 			}
 
 	}
+
+	.slick-slide {
+		margin: 0px 20px;
+	}
+	
+	.slick-slide img {
+		width: 100%;
+	}
+	
+	.slick-slider
+	{
+		position: relative;
+		display: block;
+		box-sizing: border-box;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+				user-select: none;
+		-webkit-touch-callout: none;
+		-khtml-user-select: none;
+		-ms-touch-action: pan-y;
+			touch-action: pan-y;
+		-webkit-tap-highlight-color: transparent;
+	}
+	
+	.slick-list
+	{
+		position: relative;
+		display: block;
+		overflow: hidden;
+		margin: 0;
+		padding: 0;
+	}
+	.slick-list:focus
+	{
+		outline: none;
+	}
+	.slick-list.dragging
+	{
+		cursor: pointer;
+		cursor: hand;
+	}
+	
+	.slick-slider .slick-track,
+	.slick-slider .slick-list
+	{
+		-webkit-transform: translate3d(0, 0, 0);
+		   -moz-transform: translate3d(0, 0, 0);
+			-ms-transform: translate3d(0, 0, 0);
+			 -o-transform: translate3d(0, 0, 0);
+				transform: translate3d(0, 0, 0);
+	}
+	
+	.slick-track
+	{
+		position: relative;
+		top: 0;
+		left: 0;
+		display: block;
+	}
+	.slick-track:before,
+	.slick-track:after
+	{
+		display: table;
+		content: '';
+	}
+	.slick-track:after
+	{
+		clear: both;
+	}
+	.slick-loading .slick-track
+	{
+		visibility: hidden;
+	}
+	
+	.slick-slide
+	{
+		display: none;
+		float: left;
+		height: 100%;
+		min-height: 1px;
+	}
+	[dir='rtl'] .slick-slide
+	{
+		float: right;
+	}
+	.slick-slide img
+	{
+		display: block;
+	}
+	.slick-slide.slick-loading img
+	{
+		display: none;
+	}
+	.slick-slide.dragging img
+	{
+		pointer-events: none;
+	}
+	.slick-initialized .slick-slide
+	{
+		display: block;
+	}
+	.slick-loading .slick-slide
+	{
+		visibility: hidden;
+	}
+	.slick-vertical .slick-slide
+	{
+		display: block;
+		height: auto;
+		border: 1px solid transparent;
+	}
+	.slick-arrow.slick-hidden {
+		display: none;
+	}
+
+	p { margin:0 }
