--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ nav {
   padding: 15px;
   background-color: white;
   opacity: 50%;
-  /* width: 100%; */
   z-index: 1000;
 }
 
@@ -68,6 +67,7 @@ nav a {
   justify-content: left;
   text-align: left;
   margin-left: 22%;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 .hero-section h1 {
@@ -75,18 +75,20 @@ nav a {
   flex-wrap: wrap;
   font-size: 56px;
   font-weight: 900;
-  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
   color: black;
   margin: 10px 0;
 }
 
 .hero-section h2 {
+  display: flex;
+  text-align: left;
   font-size: 20px;
   font-weight: 400;
-  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 .hero-section p {
+  display: flex;
+  text-align: left;
   font-size: 16px;
   font-weight: 300;
   max-width: 800px;
@@ -105,7 +107,6 @@ nav a {
   display: flex;
   justify-content: left;
   align-items: center;
-  /* margin-left: 22%; */
 }
 
 .project {
@@ -252,8 +253,6 @@ nav a {
 .about-section {
   height: 100vh;
   display: flex;
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
   align-items: center;
   justify-content: left;
   text-align: left;
@@ -272,12 +271,14 @@ nav a {
   font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
   color: black;
   margin: 10px 0;
+  text-align: left;
 }
 
 .about-section h2 {
   font-size: 18px;
   font-weight: 400;
   font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  text-align: left;
 }
 
 .about-section p {
@@ -285,14 +286,14 @@ nav a {
   font-weight: 300;
   max-width: 800px;
   line-height: 1.5;
+  text-align: left;
 }
 
 #experiences {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  margin-left: 30%;
+  margin-left: 22%;
 }
 
 #experiences h3 {
@@ -363,10 +364,8 @@ nav a {
 
 #educations {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  margin-left: 30%;
 }
 
 #educations h3 {
@@ -376,7 +375,6 @@ nav a {
 
 .education {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -387,7 +385,6 @@ nav a {
 .education-content {
   flex: 1;
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -419,6 +416,8 @@ nav a {
   display: flex;
   flex-wrap: wrap;
   text-align: center;
+  height: 100vh;
+  max-width: 800px;
 }
 
 .testimoni-container {
@@ -426,6 +425,7 @@ nav a {
   overflow-x: hidden; 
   scroll-snap-type: x mandatory;
   position: relative;
+  max-width: 800px;
 }
 
 .recommendations {
@@ -438,6 +438,7 @@ nav a {
 .recommendations h3 {
   display: flex;
   line-height: 5px;
+  margin-bottom: 100px;
 }
 
 .testimoni {
@@ -451,7 +452,7 @@ nav a {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  max-width: 1000px;
+  max-width: 800px;
   line-height: 20px;
 }
 
@@ -461,16 +462,21 @@ nav a {
   width: 100px;
   height: 100px;
   object-fit: cover;
+  margin-bottom: 10px;
 }
 
 .testimoni-content h2 {
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .testimoni-content h3 {
-  text-align: left;
+  display: flex;
+  text-align: center;
+  justify-content: center;
   font-size: 14px;
   flex: 1;
+  margin: 20px;
 }
 
 .testimoni-content-text {
@@ -497,12 +503,13 @@ nav a {
 .testimoni-content-text p {
   text-align: left;
   font-size: 14px;
+  margin: 0 auto;
 }
 
 .navigation {
   margin-top: 10px;
   position: absolute;
-  top: 100%;
+  top: 30%;
   transform: translateY(-50%);
   width: 100%;
 }
@@ -525,18 +532,6 @@ nav a {
   right: 10px;
 }
 
-
-/* @media screen and (min-width: 768px) {
-  .hero-section img {
-      float: left;
-      margin-right: 20px;
-      max-width: 50%;
-  }
-} */
-
-/* Aturan dasar yang tetap sama */
-
-/* Styles for screens smaller than 768px (mobile devices) */
 @media screen and (max-width: 768px) {
   nav {
     position: relative;
@@ -599,8 +594,8 @@ nav a {
   }
 
   .about-section img {
-    max-width: 100%;
-    margin-right: 0;
+    max-width: 100%; 
+    height: auto; 
   }
 
   #experiences h3 {
