--- a/styles.css
+++ b/styles.css
@@ -559,6 +559,89 @@ nav a {
 
 #scrollToTopBtn i {
   font-size: 14px;
+  text-align: left;
+  align-items: center;
+}
+
+.detail {
+  font-size: 14px;
+}
+
+#case-study {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
+
+#case-study h1 {
+  font-size: 32px;
+  text-align: center;
+  align-items: center;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 400;
+}
+
+#case-study h2 {
+  font-size: 22px;
+  text-align: left;
+  align-items: center;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 300;
+}
+
+#case-study p {
+  font-size: 16px;
+  text-align: left;
+  align-items: center;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  line-height: 1.5;
+  font-weight: 200;
+}
+
+#case-study img {
+  align-items: center;
+  justify-content: center;
+}
+
+.highlight {
+  background-color: lightyellow;
+}
+
+.grid-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  position: relative;
+}
+
+.grid-item {
+  flex: 0 0 30%; 
+  background-color: lightgrey; 
+  opacity: 80%;
+  padding: 20px;
+  margin: 0 5px; 
+  border-radius: 10px;
+  position: relative;
+}
+
+.grid-item h2 {
+  margin-top: 0;
+  font-size: 10px;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  line-height: 1;
+  font-weight: 50;
+}
+
+.grid-item p {
+  margin-bottom: 0;
+  font-size: 10px;
+  font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  line-height: 1;
+  font-weight: 50;
 }
 
 @media screen and (max-width: 768px) {
