update: all project - initial draft

--- a/styles.css
+++ b/styles.css
@@ -658,6 +658,18 @@ nav a {
   font-weight: 50;
 }
 
+.not-found-container {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.not-found-container h1, p {
+  text-align: center;
+}
+
 @media screen and (max-width: 768px) {
   nav {
     position: relative;
